finish discord rendering tests + readme + copy ci/cd from pandocgui